--- a/poker-fe/src/styles.css
+++ b/poker-fe/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+.key-drop-area {
+    height: 300px;
+    width: 300px;
+    background-color: lightskyblue;
+}
