move wallet uploader to ng component

--- a/poker-fe/src/app/app.component.html
+++ b/poker-fe/src/app/app.component.html
@@ -1,6 +1,3 @@
-<input 
-class="key-drop-area" 
-type="file"
-multiple="false"
-(change)="onFileChange($event)"
->
+<app-upload-wallet>
+    
+</app-upload-wallet>
