game create id emit back to front end

--- a/poker-fe/src/styles.css
+++ b/poker-fe/src/styles.css
@@ -3,3 +3,8 @@
     width: 300px;
     background-color: lightskyblue;
 }
+
+.player-gen-container {
+    background-color: lightskyblue;
+    padding: 10px;
+}
