--- a/poker-fe/src/styles.css
+++ b/poker-fe/src/styles.css
@@ -6,5 +6,8 @@
 
 .player-gen-container {
     background-color: lightskyblue;
+    margin: 10px;
     padding: 10px;
+    border-radius: 10px;
+    width: 100px;
 }
