--- a/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
+++ b/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
@@ -1,6 +1,6 @@
 <div class="player-gen-container">
     Player {{getAddress()}}
-    <button (click)="join()" [disabled]="alreadyJoined">
+    <button (click)="join()" [disabled]="alreadyJoined || !gameId">
         Join
     </button>
 
