game state changes set up

--- a/poker-fe/src/app/app.component.html
+++ b/poker-fe/src/app/app.component.html
@@ -9,8 +9,8 @@
 </app-player-gen>
 
 <div *ngIf="gameId">
-    Game State 
-    <button (click)="startGameClick()">
+    Game State: {{gameState}}
+    <button (click)="startGameClick()" [disabled]="gameStarted()">
         Start Game
     </button>
 </div>
