--- a/poker-fe/src/styles.css
+++ b/poker-fe/src/styles.css
@@ -11,3 +11,11 @@
     border-radius: 10px;
     width: 100px;
 }
+
+.game-state-container {
+    background-color: lightcoral;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    width: 500px;
+}
