betting raising exists, not working yet

--- a/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
+++ b/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
@@ -4,6 +4,12 @@
         Join
     </button>
 
+    <div>
+        Current Bet: {{curBet}}
+    </div>
+
+    <input type="number" [(value)]="betInput"/>
+
     <button (click)="makeBet()" [disabled]="!needsBet">
         Make bet
     </button>
