better raising more etc, to be continued

--- a/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
+++ b/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
@@ -8,7 +8,7 @@
         Current Bet: {{curBet}}
     </div>
 
-    <input type="number" [(value)]="betInput"/>
+    <input [(ngModel)]="betInput" />
 
     <button (click)="makeBet()" [disabled]="!needsBet">
         Make bet
