fix bet input type

--- a/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
+++ b/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
@@ -8,7 +8,7 @@
         Current Bet: {{curBet}}
     </div>
 
-    <input [(ngModel)]="betInput" />
+    <input [(ngModel)]="betInput" type="number" />
 
     <button (click)="makeBet()" [disabled]="!needsBet">
         Make bet
