bet flow works, sans fold

--- a/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
+++ b/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
@@ -5,14 +5,18 @@
     </button>
 
     <div>
-        Current Bet: {{curBet}}
+        Outstanding Bet: {{outstandingBet}}
     </div>
 
     <input [(ngModel)]="betInput" type="number" />
 
-    <button (click)="makeBet()" [disabled]="!needsBet">
+    <button (click)="makeBetClick()" [disabled]="!needsBet">
         Make bet
     </button>
+    <button (click)="foldClick()" [disabled]="!needsBet">
+        Fold
+    </button>
+
 
     <div *ngFor="let card of cards">
         <div>
