fold logic (nominally) working

--- a/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
+++ b/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
@@ -7,7 +7,9 @@
     <div>
         Outstanding Bet: {{outstandingBet}}
     </div>
-
+    <div class="error-text">
+        {{errMsg}}
+    </div>
     <input [(ngModel)]="betInput" type="number" />
 
     <button (click)="makeBetClick()" [disabled]="!needsBet">
