cleaner cy tests

--- a/poker-fe/src/app/app.component.html
+++ b/poker-fe/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 <div class="game-state-container" *ngIf="gameId">
     <div>
-        Players:
+        Players Count {{blankPlayerIter.length}}
     </div>
     <div *ngFor="let player of playersInGame">
         {{player}}
