dev endpoints added for repeatable tests

--- a/poker-fe/src/app/app.component.html
+++ b/poker-fe/src/app/app.component.html
@@ -4,6 +4,9 @@
 
 <div class="game-state-container" *ngIf="gameId">
     <div>
+        Game ID {{gameId}}
+    </div>
+    <div>
         Players Count {{blankPlayerIter.length}}
     </div>
     <div *ngFor="let player of playersInGame">
