raise bet from blind testing

--- a/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
+++ b/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
@@ -11,13 +11,13 @@
         Join
     </button>
 
-    <div>
+    <div class="outstanding-bet"> 
         Outstanding Bet: {{outstandingBet}}
     </div>
     <div class="error-text">
         {{errMsg}}
     </div>
-    <input [(ngModel)]="betInput" type="number" />
+    <input [(ngModel)]="betInput" type="number" class="bet-amount" />
 
     <button (click)="makeBetClick()" [disabled]="!needsBet" class="bet-button">
         Make bet
