basic chip stack added to players

--- a/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
+++ b/poker-fe/src/app/subcomponents/player-gen/player-gen.component.html
@@ -6,12 +6,14 @@
     <div>
         Address {{getAddress()}}
     </div>
-
+    <div>
+        Address {{stack}}
+    </div>
     <button (click)="join()" [disabled]="alreadyJoined || !gameId">
         Join
     </button>
 
-    <div class="outstanding-bet"> 
+    <div class="outstanding-bet">
         Outstanding Bet: {{outstandingBet}}
     </div>
     <div class="error-text">
